# bizscope

./: .gitignore  README.md  replit.md  start.sh
attached_assets/: Pasted-INFO-10-82-3-26-0-GET-api-results-page-1-limit-50-HTTP-1-1-500-Internal-Server-Error-ERRO-1760975010669_1760975010669.txt  Pasted-Project-name-BizScope-Discover-Track-and-Analyze-Connecticut-Businesses-Over-1760972669026_1760972669027.txt
backend/: data_fetcher.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  run.sh  scheduler.py  schemas.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: page.tsx
frontend/components/: BusinessModal.tsx  KeywordPanel.tsx  ResultsTable.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  store.ts
